Added configuration and tester files.

--- a/conda-envs/skc_env.yaml
+++ b/conda-envs/skc_env.yaml
@@ -14,6 +14,7 @@ dependencies:
   - scikit-learn
   - torchvision
   - pip:
+    - albumentations
     - bumpversion
     - future
     - kaggle
@@ -21,8 +22,10 @@ dependencies:
     - pandas
     - python-dotenv
     - pytest
+    - pyyaml
     - scipy
     - seaborn
     - tqdm
     - urllib3
     - wandb
+    
