--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -18,5 +18,7 @@ jobs:
     - name: Test with pytest
       shell: bash -l {0}
       run: |
+        pwd
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)"
         conda activate skc_env
         pytest -v
