Added a data exploration notebook, will continue exploring later

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -4,7 +4,7 @@ test: "test"
 train_semi_supervised: "train_semi_supervised"
 seed: 42
 
-placeholder:
+resnet34:
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
   input_size: [224, 224]
