--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -15,6 +15,14 @@ jobs:
         auto-activate-base: false
         activate-environment: skc_env
         environment-file: conda-envs/skc_env.yaml
+    - name: Check conda environment
+      shell: bash -l {0}
+      run: |
+        conda info
+        conda list
+        conda config --show-sources
+        conda config --show
+        printenv | sort
     - name: Test with pytest
       shell: bash -l {0}
       run: |
@@ -22,3 +30,8 @@ jobs:
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
         conda activate skc_env
         pytest -v
+    - name: Check wandb setup
+      shell: bash -l {0}
+      run: 
+        conda activate skc_env
+        bash scripts/wandb_init.sh
