Moved the intialization of env to yaml file itself.

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -34,4 +34,15 @@ jobs:
       shell: bash -l {0}
       run: |
         conda activate skc_env
-        bash scripts/wandb_init.sh
+        touch scripts/.env
+
+        {
+        echo 'project="Sartorius-Cell-Instance-Segmentation"'
+        'entity="{{secrets.ENTITY}}"'
+        'wandb_api_key="{{secrets.WANDB_API_KEY}}"' >> scripts/.env
+        } >> scripts/.env
+
+        echo "scripts/.env contents:"
+        cat scripts/.env
+        python scripts/wandb_init.py
+
