--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -36,11 +36,10 @@ jobs:
         conda activate skc_env
         touch scripts/.env
 
-        {
-        echo 'project="Sartorius-Cell-Instance-Segmentation"'
-        'entity="{{secrets.ENTITY}}"'
-        'wandb_api_key="{{secrets.WANDB_API_KEY}}"'
-        } >> scripts/.env
+        
+        echo 'project="Sartorius-Cell-Instance-Segmentation"' >> scripts/.env
+        echo 'entity="{{secrets.ENTITY}}"' >> scripts/.env
+        echo 'wandb_api_key="{{secrets.WANDB_API_KEY}}"' >> scripts/.env
 
         echo "scripts/.env contents:"
         cat scripts/.env
