--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -38,8 +38,8 @@ jobs:
 
         
         echo 'project="Sartorius-Cell-Instance-Segmentation"' >> scripts/.env
-        echo 'entity="{{secrets.ENTITY}}"' >> scripts/.env
-        echo 'wandb_api_key="{{secrets.WANDB_API_KEY}}"' >> scripts/.env
+        echo 'entity="${{secrets.ENTITY}}"' >> scripts/.env
+        echo 'wandb_api_key="${{secrets.WANDB_API_KEY}}"' >> scripts/.env
 
         echo "scripts/.env contents:"
         cat scripts/.env
