--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,7 +1,7 @@
 # This workflow runs tests
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Run python tests
+name: Train
 
 on: 
   push:
