--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -30,11 +30,17 @@ jobs:
         export PYTHONPATH="${PYTHONPATH}:$(pwd)"
         conda activate skc_env
         pytest -v
-    - name: Check wandb setup
+    - name: Wandb setup
       shell: bash -l {0}
       run: |
-        conda activate skc_env
-        bash scripts/wandbinit.sh
+        touch config/.env
+        
+        echo 'project="Sartorius-Cell-Instance-Segmentation"' >> config/.env
+        echo 'entity="${{secrets.ENTITY}}"' >> config/.env
+        echo 'wandb_api_key=${{secrets.WANDB_API_KEY}}' >> config/.env
+
+        echo "config/.env contents:"
+        cat config/.env
         
         python scripts/wandb_init.py
 
