--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   train:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
     - uses: conda-incubator/setup-miniconda@v2
