--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -33,6 +33,8 @@ jobs:
         export KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}
         export KAGGLE_KEY=${{ secrets.KAGGLE_API_KEY }}
         printenv | sort
+        #echo '{"username": "${{ secrets.KAGGLE_USERNAME }}","key": "${{ secrets.KAGGLE_API_KEY }}"}' > ~/.kaggle/kaggle.json
+        #echo '{"username": "nguobadia","key": "988e756880040385c3c7cfcdccb4b280"}' > ~/.kaggle/kaggle.json
 
         conda activate skc_env
         kaggle competitions download -c sartorius-cell-instance-segmentation
