--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -27,7 +27,7 @@ jobs:
         export WANDB_ENTITY=${{ secrets.ENTITY }}
         export WANDB_PROJECT=Sartorius-Cell-Instance-Segmentation
         export WANDB_API_KEY=${{ secrets.WANDB_API_KEY }}
-    - name: Download dataset
+    - name: Copying dataset
       shell: bash -l {0}
       run: |
         export KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}
