Data is now formatted correctly, weird issue occuring with the dataloader generator

--- a/.github/workflows/run-tests.yaml
+++ b/.github/workflows/run-tests.yaml
@@ -42,5 +42,6 @@ jobs:
         echo "config/.env contents:"
         cat config/.env
         
+        mkdir "models"
         python scripts/wandb_init.py
 
