--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -23,10 +23,12 @@ jobs:
     - name: Wandb setup
       shell: bash -l {0}
       run: |
-        # touch config/.env
-        export WANDB_ENTITY=${{ secrets.ENTITY }}
-        export WANDB_PROJECT=Sartorius-Cell-Instance-Segmentation
-        export WANDB_API_KEY=${{ secrets.WANDB_API_KEY }}
+        touch config/.env
+
+        echo WANDB_ENTITY=${{ secrets.ENTITY }} >> config/.env
+        echo WANDB_ENTITY=${{ secrets.ENTITY }} >> config/.env
+        echo WANDB_PROJECT=Sartorius-Cell-Instance-Segmentation >> config/.env
+        echo WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} >> config/.env
     - name: Copying dataset
       shell: bash -l {0}
       run: |
