--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -25,10 +25,9 @@ jobs:
       run: |
         touch config/.env
 
-        echo WANDB_ENTITY=${{ secrets.ENTITY }} >> config/.env
-        echo WANDB_ENTITY=${{ secrets.ENTITY }} >> config/.env
-        echo WANDB_PROJECT=Sartorius-Cell-Instance-Segmentation >> config/.env
-        echo WANDB_API_KEY=${{ secrets.WANDB_API_KEY }} >> config/.env
+        echo entity=${{ secrets.ENTITY }} >> config/.env
+        echo project=Sartorius-Cell-Instance-Segmentation >> config/.env
+        echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
     - name: Copying dataset
       shell: bash -l {0}
       run: |
