--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -46,4 +46,4 @@ jobs:
       run: |
         mkdir "models"
         conda activate skc_env
-        python scripts/train.py --model_name=unet --log=True --params_path=config/test_params.yaml
+        python scripts/train.py --model_name=unet --log=False --params_path=config/test_params.yaml --checkpoint=False
