--- a/config/params.yaml
+++ b/config/params.yaml
@@ -12,7 +12,23 @@ unet:
     mean: [0.485, 0.456, 0.406]
     std: [0.229, 0.224, 0.225]
     input_size: [224, 224]
-    eta: 0.001
     epochs: 10
     batch_size: 16
+
+  metrics:
+    iou:
+      eps: 1
+      threshold: 0.5
+  loss: 
+    dice_loss:
+      eps: 1
+      beta: 1
+    mixed_loss:
+      alpha: 10.0
+      gamma: 2.0
+  optimizer:
+    adam: 
+      eps: 1
+      betas: [0.9, 0.999]
+      lr: 0.001
   
