Switched to kfold

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -4,7 +4,7 @@ test: "test"
 model_path: "models"
 train_semi_supervised: "train_semi_supervised"
 seed: 42
-kfold: false
+kfold: true
 n_splits: 5
 
 unet:
