--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -1,6 +1,3 @@
-# This workflow runs tests
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Test train
 
 on: 
@@ -25,7 +22,7 @@ jobs:
       run: |
         touch config/.env
 
-        echo entity=${{ secrets.ENTITY }} >> config/.env
+        echo entity=nclgbd >> config/.env
         echo project=Sartorius-Cell-Instance-Segmentation >> config/.env
         echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
     - name: Copying dataset
@@ -39,6 +36,7 @@ jobs:
         conda activate skc_env
         cp ~/datasets/sartorius-cell-instance-segmentation.zip .
         unzip -o -q sartorius-cell-instance-segmentation.zip -d data
+        rm -rf sartorius-cell-instance-segmentation.zip
         ls -la data/
         echo "Moving data complete. Exit code $(echo $?)"
     - name: Train
