--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,6 +1,3 @@
-# This workflow runs tests
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Train all models
 
 on: 
@@ -25,7 +22,7 @@ jobs:
       run: |
         touch config/.env
 
-        echo entity=${{ secrets.ENTITY }} >> config/.env
+        echo entity=nclgbd >> config/.env
         echo project=Sartorius-Cell-Instance-Segmentation >> config/.env
         echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
 
@@ -41,8 +38,9 @@ jobs:
         conda activate skc_env
         cp ~/datasets/sartorius-cell-instance-segmentation.zip .
         unzip -o -q sartorius-cell-instance-segmentation.zip -d data
+        rm -rf sartorius-cell-instance-segmentation.zip
         ls -la data/
-        echo "Moving data complete. Exit code $(echo $?)"
+        echo "Moving data complete. Exit code $(echo $?)."
     - name: Train
       shell: bash -l {0}
       run: |
