--- a/config/test_defaults.yaml
+++ b/config/test_defaults.yaml
@@ -10,12 +10,12 @@ model_path: "models"
 
 # Filenames
 train_csv: "train.csv"
-sweep_path: "sweep.yaml"
+sweep_path: "test_sweep.yaml"
 params_path: "test_params.yaml"
 
 
 # Defaults
-log: false
+log: true
 checkpoint: false
 sweep: false
 kfold: true
