--- a/config/test_defaults_wandb.yaml
+++ b/config/test_defaults_wandb.yaml
@@ -2,8 +2,8 @@
 model_name: unet
 config_path: "config/"
 directory_path: "data/"
-train_path: "train/"
-test_path: "test/"
+train_path: "data/train/"
+test_path: "data/test/"
 train_semi_supervised_path: "train_semi_supervised"
 model_path: "models"
 
@@ -16,7 +16,7 @@ params_path: "test_params.yaml"
 
 # Defaults
 log: true
-checkpoint: false
+checkpoint: true
 sweep: false
 kfold: true
 seed: 42
