--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -1,5 +1,4 @@
-name: Train all models
-
+name: train all
 on: 
   push:
     branches:
@@ -48,44 +47,44 @@ jobs:
         conda activate skc_env
         python scripts/train.py --defaults_path config/defaults_unet.yaml
 
-  train-unetplusplus:
-    runs-on: self-hosted
-    steps:
-    - uses: actions/checkout@v2
-    - name: Check conda environment
-      shell: bash -l {0}
-      run: |
-        conda info
-        conda env list
-        conda config --show-sources
-        conda config --show
-    - name: Wandb setup
-      shell: bash -l {0}
-      run: |
-        touch config/.env
+  # train-unetplusplus:
+  #   runs-on: self-hosted
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #   - name: Check conda environment
+  #     shell: bash -l {0}
+  #     run: |
+  #       conda info
+  #       conda env list
+  #       conda config --show-sources
+  #       conda config --show
+  #   - name: Wandb setup
+  #     shell: bash -l {0}
+  #     run: |
+  #       touch config/.env
 
-        echo entity=nclgbd >> config/.env
-        echo project=Sartorius-Cell-Instance-Segmentation >> config/.env
-        echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
+  #       echo entity=nclgbd >> config/.env
+  #       echo project=Sartorius-Cell-Instance-Segmentation >> config/.env
+  #       echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
 
-        cat config/.env
-    - name: Copying dataset
-      shell: bash -l {0}
-      run: |
-        export KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}
-        export KAGGLE_KEY=${{ secrets.KAGGLE_API_KEY }}
-        printenv | sort
+  #       cat config/.env
+  #   - name: Copying dataset
+  #     shell: bash -l {0}
+  #     run: |
+  #       export KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}
+  #       export KAGGLE_KEY=${{ secrets.KAGGLE_API_KEY }}
+  #       printenv | sort
 
-        echo "Copying `sartorius-cell-instance-segmentation.zip` to current directory..."
-        conda activate skc_env
-        cp ~/datasets/sartorius-cell-instance-segmentation.zip .
-        unzip -o -q sartorius-cell-instance-segmentation.zip -d data
-        rm -rf sartorius-cell-instance-segmentation.zip
-        ls -la data/
-        echo "Moving data complete. Exit code $(echo $?)."
-    - name: Train
-      shell: bash -l {0}
-      run: |
-        mkdir "models"
-        conda activate skc_env
-        python scripts/train.py --defaults_path config/defaults_unetplusplus.yaml
+  #       echo "Copying `sartorius-cell-instance-segmentation.zip` to current directory..."
+  #       conda activate skc_env
+  #       cp ~/datasets/sartorius-cell-instance-segmentation.zip .
+  #       unzip -o -q sartorius-cell-instance-segmentation.zip -d data
+  #       rm -rf sartorius-cell-instance-segmentation.zip
+  #       ls -la data/
+  #       echo "Moving data complete. Exit code $(echo $?)."
+  #   - name: Train
+  #     shell: bash -l {0}
+  #     run: |
+  #       mkdir "models"
+  #       conda activate skc_env
+  #       python scripts/train.py --defaults_path config/defaults_unetplusplus.yaml
