Fixed pathing issue

--- a/config/test_defaults_wandb.yaml
+++ b/config/test_defaults_wandb.yaml
@@ -2,14 +2,14 @@
 model_name: unet
 config_path: "config/"
 directory_path: "data/"
-train_path: "data/train/"
-test_path: "data/test/"
+train_path: "train/"
+test_path: "test/"
 train_semi_supervised_path: "train_semi_supervised"
 model_path: "models"
 
 
 # Filenames
-train_csv: "data/train.csv"
+train_csv: "train.csv"
 sweep_path: "sweep.yaml"
 params_path: "test_params.yaml"
 
