--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -2,8 +2,8 @@
 model_name: unet
 config_path: "config/"
 directory_path: "data/"
-train_path: "data/train/"
-test_path: "data/test/"
+train_path: "train/"
+test_path: "test/"
 train_semi_supervised_path: "train_semi_supervised"
 model_path: "models"
 
