Changed scripts to be more modular and less copying of code. Created associated run ids

--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -19,12 +19,12 @@ jobs:
         shell: bash -l {0}
         run: |
           touch config/.env
-          bash workflow_scripts/wandb-setup.bash
-          echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
+          bash workflow_scripts/wandb-setup.bash ${{ secrets.DEVELOP_RUN_ID }}
+          echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/develop.env
 
       - name: Copying dataset
         shell: bash -l {0}
-        run: bash scripts.copy-dataset.bash
+        run: bash workflow_scripts/copy-dataset.bash
       - name: Train
         shell: bash -l {0}
         run: |
@@ -44,12 +44,12 @@ jobs:
         shell: bash -l {0}
         run: |
           touch config/.env
-          bash workflow_scripts/wandb-setup.bash
-          echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/.env
+          bash workflow_scripts/wandb-setup.bash ${{ secrets.DEVELOP_RUN_ID }}
+          echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/develop.env
 
       - name: Copying dataset
         shell: bash -l {0}
-        run: bash scripts.copy-dataset.bash
+        run: bash workflow_scripts/copy-dataset.bash
       - name: Train
         shell: bash -l {0}
         run: |
