--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -6,13 +6,12 @@ train_path: "train/"
 test_path: "test/"
 train_semi_supervised_path: "train_semi_supervised"
 model_path: "models"
-
+mode: "train"
 
 # Filenames
 train_csv: "train.csv"
 sweep_path: "sweep.yaml"
 params_path: "params_unet.yaml"
-
 
 # Defaults
 log: true
