Fixed train run id

--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -17,7 +17,7 @@ jobs:
         shell: bash -l {0}
         run: |
           touch config/.env
-          bash workflow_scripts/wandb-setup.bash ${{ secrets.DEVELOP_RUN_ID }}
+          bash workflow_scripts/wandb-setup.bash ${{ secrets.TRAIN_RUN_ID }}
           echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/train.env
 
       - name: Copying dataset
