--- a/.github/workflows/train-tests.yaml
+++ b/.github/workflows/train-tests.yaml
@@ -35,10 +35,7 @@ jobs:
         run: bash workflow_scripts/check-conda-env.bash
       - name: Wandb setup
         shell: bash -l {0}
-        run: |
-          touch config/.env
-          bash workflow_scripts/wandb-setup.bash ${{ secrets.DEVELOP_RUN_ID }}
-          echo wandb_api_key=${{ secrets.WANDB_API_KEY }} >> config/develop.env
+        run: bash workflow_scripts/wandb-setup.bash ${{ secrets.DEVELOP_RUN_ID }} ${{ secrets.WANDB_API_KEY }} config/develop.env
 
       - name: Copying dataset
         shell: bash -l {0}
