Changed configure_params method to create variables instead

--- a/config/test_defaults.yaml
+++ b/config/test_defaults.yaml
@@ -15,7 +15,7 @@ params_path: "test_params.yaml"
 
 # Defaults
 log: false
-checkpoint: true
+checkpoint: false
 sweep: false
 kfold: true
 seed: 42
