--- a/.github/workflows/train-unet.yaml
+++ b/.github/workflows/train-unet.yaml
@@ -21,7 +21,7 @@ jobs:
         shell: bash -l {0}
         run: |
           branch_name=${{ steps.extract_branch.outputs.branch }}-lab
-          bash workflow_scripts/wandb-setup.bash branch_name ${{ secrets.WANDB_API_KEY }} config/train.env
+          bash workflow_scripts/wandb-setup.bash $branch_name ${{ secrets.WANDB_API_KEY }} config/train.env
       - name: Copying dataset
         shell: bash -l {0}
         run: bash workflow_scripts/copy-dataset.bash
