--- a/config/sweep.yaml
+++ b/config/sweep.yaml
@@ -7,7 +7,7 @@ command:
   - --defaults_path
   - config/test_defaults.yaml
 metric:
-  name: valid_avg_iou
+  name: valid_logs.avg_iou
   goal: maximize
 parameters:
   loss:
@@ -15,7 +15,7 @@ parameters:
   optimizer:
     value: "adam"
   batch_size:
-      values: [2, 4, 8, 16, 32]
+      values: [2, 4, 8, 16, 32, 64]
   eps:
     distribution: uniform
     min: 0.1
