--- a/config/test_defaults_wandb.yaml
+++ b/config/test_defaults_wandb.yaml
@@ -16,7 +16,7 @@ params_path: "test_params.yaml"
 # Defaults
 log: true
 checkpoint: false
-sweep: false
+sweep: true
 kfold: true
 seed: 42
 n_splits: 5
@@ -25,6 +25,7 @@ beta: [0.9, 0.999]
 mean: [0.485, 0.456, 0.406]
 std: [0.229, 0.224, 0.225]
 image_resize: [224, 224]
+batch_size: 16
 epochs: 1
 
 # Models
