Everything works except for sweeps still. Worth merging due tot he refactoring

--- a/config/test_defaults_wandb.yaml
+++ b/config/test_defaults_wandb.yaml
@@ -16,7 +16,7 @@ params_path: "test_params.yaml"
 # Defaults
 log: true
 checkpoint: false
-sweep: true
+sweep: false
 kfold: true
 seed: 42
 n_splits: 5
