--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -2,17 +2,16 @@
 model_name: unet
 config_path: "config/"
 directory_path: "data/"
-train_path: "data/train/"
-test_path: "data/test/"
+train_path: "train/"
+test_path: "test/"
 train_semi_supervised_path: "train_semi_supervised"
 model_path: "models"
-
+mode: "train"
 
 # Filenames
-train_csv: "data/train.csv"
+train_csv: "train.csv"
 sweep_path: "sweep.yaml"
 params_path: "params_unet.yaml"
-
 
 # Defaults
 log: true
@@ -26,11 +25,12 @@ beta: [0.9, 0.999]
 mean: [0.485, 0.456, 0.406]
 std: [0.229, 0.224, 0.225]
 image_resize: [224, 224]
+batch_size: 32
 epochs: 1000
 
 # Models
 unet:
-  encoder_name: "resnet34"
+  encoder_name: "xception"
   encoder_depth: 5
   encoder_weights: "imagenet"
   decoder_channels: [256, 128, 64, 32, 16]
