--- a/config/test_params.yaml
+++ b/config/test_params.yaml
@@ -1,15 +1,13 @@
 model_name: unet
-lr: 0.0001
-batch_size: 16
 metrics:
   iou:
     eps: 1
     threshold: 0.5
 loss:
-  dice_loss:
-    eps: 1
-    beta: 1
+  mixed_loss:
+    alpha: 10
+    gamma: 2.0
 optimizer:
-  adam: 
+  adam:
     eps: 1
-    
+    lr: 0.0001
