--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -30,7 +30,7 @@ epochs: 1000
 
 # Models
 unet:
-  encoder_name: "xception"
+  encoder_name: "efficientnet-b5"
   encoder_depth: 5
   encoder_weights: "imagenet"
   decoder_channels: [256, 128, 64, 32, 16]
