--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -25,13 +25,13 @@ beta: [0.9, 0.999]
 mean: [0.485, 0.456, 0.406]
 std: [0.229, 0.224, 0.225]
 image_resize: [224, 224]
-batch_size: 16
+batch_size: 8
 epochs: 1000
-patience: 7
+patience: 14
 
 # Models
 unet:
-  encoder_name: "timm-efficientnet-b4"
+  encoder_name: "efficientnet-b5"
   encoder_depth: 5
   encoder_weights: "imagenet"
   decoder_channels: [256, 128, 64, 32, 16]
