--- a/config/defaults_unet.yaml
+++ b/config/defaults_unet.yaml
@@ -31,7 +31,7 @@ patience: 14
 
 # Models
 unet:
-  encoder_name: "efficientnet-b5"
+  encoder_name: "xception"
   encoder_depth: 5
   encoder_weights: "imagenet"
   decoder_channels: [256, 128, 64, 32, 16]
